Fixed log on mobile

--- a/css/general.scss
+++ b/css/general.scss
@@ -28,7 +28,7 @@ aside {
     }
     h1 {
       @include logo($blue, $pink, $blue, none);
-      font-size: 7em;
+      font-size: 4.5em;
       vertical-align: middle;
       
     }
